# self-balancing-robot-using-RL

./: .gitignore  .gitmodules  LICENSE  README.md  RTIMULib.ini
arduino/: README.md
arduino/PIDcontrol/: PIDcontrol.ino
arduino/get_data_test/: get_data_test.ino
arduino/main/: PID.cpp  PID.h  WheelController.cpp  fixedpoint.cpp  fixedpoint.h  main.ino
arduino/main_datalog/: main_datalog.ino
arduino/main_datalog_test1/: PID.h  WheelController.cpp  WheelController.h  encoders.cpp  encoders.h  main_datalog_test1.ino
arduino/main_datalog_test2/: main_datalog_test2.ino
arduino/main_datalog_test3/: PID.h  fixedpoint.h  main_datalog_test3.ino
arduino/main_fromlap/: main_fromlap.ino
arduino/main_v1/: PID.cpp  fixedpoint.cpp  main_v1.ino
arduino/motors_and_encoders_running/: motors_and_encoders_running.ino
arduino/pid_robot_cntrl/: WheelController.cpp  encoders.h  pid_robot_cntrl.ino
arduino/pwm_motordrive/: pwm_motordrive.ino
arduino/rpm_interrupts/: rpm_interrupts.ino
arduino/serial_coms_test/: serial_coms_test.ino
gazebo/: LICENSE  README.md
gazebo/restart_sim/src/: .restart_sim.cpp.swp  restart_sim.cpp
gazebo/rsv_balance_gazebo/: CHANGELOG.rst  package.xml  rosdoc.yaml
gazebo/rsv_balance_gazebo/include/gazebo_rsv_balance/: gazebo_rsv_balance.h
gazebo/rsv_balance_gazebo/launch/: simulation_empty.launch  simulation_ramp.launch  simulation_terrain.launch  view.launch
gazebo/rsv_balance_gazebo/launch/include/: spawn_robot.launch
gazebo/rsv_balance_gazebo/models/terrain/: model.sdf
gazebo/rsv_balance_gazebo/src/: gazebo_rsv_balance.cpp
gazebo/rsv_balance_gazebo/worlds/: ramp.world
gazebo/rsv_balance_gazebo_control/: CMakeLists.txt
gazebo/rsv_balance_gazebo_control/include/rsv_balance_gazebo_control/: balance_gazebo_control.h
gazebo/rsv_balance_gazebo_control/src/: balance_gazebo_control.cpp
gazebo/rsv_balance_simulator/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
gazebo/rsv_balance_simulator/rsv_balance_gazebo/: CMakeLists.txt
gazebo/rsv_balance_simulator/rsv_balance_gazebo/include/gazebo_rsv_balance/: gazebo_rsv_balance.h
gazebo/rsv_balance_simulator/rsv_balance_gazebo/launch/include/: spawn_robot.launch
gazebo/rsv_balance_simulator/rsv_balance_gazebo/models/terrain/: model.config
gazebo/rsv_balance_simulator/rsv_balance_gazebo/rviz/: gazebo.rviz
gazebo/rsv_balance_simulator/rsv_balance_gazebo/src/: gazebo_rsv_balance.cpp
gazebo/rsv_balance_simulator/rsv_balance_gazebo/urdf/: balance.gazebo.xacro  robot.gazebo.xacro
gazebo/rsv_balance_simulator/rsv_balance_gazebo/worlds/: terrain.world
gazebo/rsv_balance_simulator/rsv_balance_gazebo_control/: CHANGELOG.rst  package.xml
gazebo/rsv_balance_simulator/rsv_balance_gazebo_control/include/rsv_balance_gazebo_control/: control.h
gazebo/rsv_balance_simulator/rsv_balance_gazebo_control/src/: control.cpp
gazeboSimulation/: gazebo_rsv_balance_data_collection.cpp  gazebo_rsv_balance_pid.cpp  gazebo_rsv_balance_pid2.cpp  gazebo_rsv_balance_q_learning.cpp  gazebo_rsv_balance_q_learning_no_modelOLD.cpp  gazebo_rsv_balance_q_learning_no_model_T1.cpp  gazebo_rsv_balance_sarsa.cpp  read_bags.py
gazeboSimulation/q_model_install/msg/: Q_state.msg
gazeboSimulation/restart_sim/src/: restart_sim.cpp
gridWorld/src/: CMakeLists.txt
gridWorld/src/examples/: CMakeLists.txt  cliff_world.cpp  gridWorld.cpp  gridWorld.hpp  qLearningGridWorld.cpp  sarsaGridWorld.cpp  two_wheeled.cpp  two_wheeled_main.cpp
gridWorld/src/rl/: CMakeLists.txt  environment.cpp  environment.hpp  q_learning.cpp  q_learning.hpp  reinforcement_learning.cpp  reinforcement_learning.h  rl.cpp  rl.hpp  sarsa.cpp  sarsa.h  sarsa.hpp
rl_code/: plot_results.py
rl_code/src/: sarsa.cpp  sarsa.h
rl_code/src/examples/: CMakeLists.txt  cliff_example_main.cpp  cliff_example_main_SARSA.cpp  cliff_world.cpp  cliff_world.h  cliff_world.h.autosave  two_wheeled.cpp  two_wheeled.h  two_wheeled_main.cpp
rl_code/src/rl/: CMakeLists.txt  environment.cpp  environment.h  q_learning.cpp  q_learning.h  reinforcement_learning.cpp  reinforcement_learning.h  sarsa.cpp
robot/ros/controller/: CMakeLists.txt  (+1 more)
robot/speedController/: PID.cpp  PID.hpp  encoders.cpp  encoders.hpp  fixedpoint.cpp  fixedpoint.hpp  speedController.ino  wheelController.cpp  wheelController.hpp
ros/arduino_feedback/: CMakeLists.txt  package.xml
ros/controller/: CMakeLists.txt  package.xml
ros/motors/: CMakeLists.txt  package.xml
ros/robot_teleop_tuner/: CMakeLists.txt  package.xml
rsv_simulation/: Qsa_scrapper.py  data_collection_all_steps.cpp  data_collection_one_step.cpp  gazebo_prediction.m  gazebo_rsv_balance_SARSA.cpp  gazebo_rsv_balance_SARSA_disturbance.cpp  gazebo_rsv_balance_SARSA_noisey.cpp  gazebo_rsv_balance_data_collection.cpp  gazebo_rsv_balance_original.cpp  gazebo_rsv_balance_pid.cpp  gazebo_rsv_balance_pid2.cpp  gazebo_rsv_balance_q_learning.cpp  gazebo_rsv_balance_q_learning_no_model.cpp  gazebo_rsv_balance_q_learning_no_modelOLD.cpp  gazebo_rsv_balance_q_learning_no_modelWEIGHTTEST.cpp  plot_curve.py  read_bags_3d.py  state_freq_v2.py
rsv_simulation/q_model_install/: CMakeLists.txt  package.xml
rsv_simulation/restart_sim/: CMakeLists.txt  package.xml
(+26 files in other folders)
