<?xml version="1.0"?>
<package>
  <name>rsv_balance_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo's specific packages for RoboSavvy's balance platform.</description>

  <maintainer email="vmatos@robosavvy.com">Vitor Matos</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/Robots/RoboSavvyBalance</url>
  <url type="repository">https://github.com/robosavvy/rsv_balance_simulator</url>
  <author email="vmatos@robosavvy.com">Vitor Matos</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rsv_balance_gazebo_control</build_depend>
  <build_depend>rsv_balance_msgs</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rsv_balance_description</run_depend>
  <run_depend>rsv_balance_gazebo_control</run_depend>
  <run_depend>rsv_balance_msgs</run_depend>
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
