<?xml version="1.0"?>
<package>
  <name>rsv_balance_gazebo_control</name>
  <version>0.0.1</version>
  <description>Self-balancing control implementation package: currently simple PID demo.</description>

  <maintainer email="vmatos@robosavvy.com">Vitor Matos</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/Robots/RoboSavvyBalance</url>
  <url type="repository">https://github.com/robosavvy/rsv_balance_simulator</url>
  <author email="vmatos@robosavvy.com">Vitor Matos</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslint</build_depend>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
